docs: significantly enhance by-topic documentation quality
Major enhancements to all topic timelines with deep technical details:

GC Timeline:
- Added GC classification and basic concepts
- Enhanced G1 architecture with Region layout diagrams
- Added ZGC colored pointers explanation and load barrier details
- Enhanced Shenandoah Brooks forwarding pointers
- Added comprehensive configuration guides for all GCs
- Added GC troubleshooting section with common issues and tools
- Added performance tuning guidelines

Concurrency Timeline:
- Enhanced with complete concurrency model evolution
- Added detailed Executor framework and ThreadPoolExecutor explanation
- Added Fork/Join work-stealing diagrams
- Enhanced Flow API with Processor examples
- Added virtual threads implementation details
- Enhanced Scoped Values with comparison to ThreadLocal
- Added Structured Concurrency with Joiner API details
- Added decision trees for choosing concurrency tools

HTTP Timeline:
- Added HTTP protocol evolution comparison table
- Enhanced HttpURLConnection examples with error handling
- Added HttpClient architecture diagrams
- Enhanced HTTP/2 multiplexing explanation
- Added comprehensive HTTP/3 and QUIC protocol stack details
- Added performance comparison with RTT calculations
- Enhanced best practices section

Security Timeline:
- Completely rewritten with cryptography fundamentals
- Added symmetric vs asymmetric encryption comparison
- Enhanced TLS 1.3 handshake diagrams
- Added ChaCha20-Poly1305 implementation details
- Enhanced SHA-3 and KMAC examples
- Added comprehensive post-quantum cryptography section
- Added ML-DSA and ML-KEM usage examples
- Enhanced KDF API with HKDF examples
- Added PEM format support details

Index:
- Added comprehensive feature first-release version table
- Added decision trees for JDK version selection
- Added performance improvement summary
- Added migration guidelines between JDK versions

Stats: +2413 lines, -805 lines across 5 files

Co-Authored-